[package]
name = "weaver-yenc"
description = "yEnc encoding and decoding with streaming CRC verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
crc32fast = { workspace = true }
memchr = { workspace = true }
