[package]
name = "weaver"
description = "Unified Usenet binary downloader, repair, and extraction engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
weaver-server-core = { path = "../../crates/weaver-server-core", default-features = false }
weaver-nntp = { path = "../../../engines/weaver-nntp", default-features = false }
weaver-nzb = { path = "../../../engines/weaver-nzb", default-features = false }
weaver-yenc = { path = "../../../engines/weaver-yenc", default-features = false }
weaver-par2 = { path = "../../../engines/weaver-par2", default-features = false, features = [
    "native-crypto",
] }
weaver-unrar = { path = "../../../engines/weaver-unrar", default-features = false, features = [
    "native-crypto",
] }
weaver-server-api = { path = "../../crates/weaver-server-api", default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true, default-features = false }
bytes = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true, default-features = false }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true, default-features = false }
reqwest = { workspace = true }
libc = { workspace = true }
rayon = { workspace = true, default-features = false }
rust-embed = { workspace = true, default-features = false }
mime_guess = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
zstd = { workspace = true }
sevenz-rust2 = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
bzip2 = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
embed-resource = "3.0.9"

[dev-dependencies]
tower = { workspace = true, default-features = false }
