[package]
name = "weaver-server-api"
description = "GraphQL API with subscriptions for Weaver pipeline control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weaver-server-core = { path = "../weaver-server-core" }
base64 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
scrypt = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
feed-rs = { workspace = true }
regex = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-stream = "0.3"
tar = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
scryer-release-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
