[package]
name = "weaver-server-api"
description = "GraphQL API with subscriptions for Weaver pipeline control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weaver-server-core = { path = "../weaver-server-core", default-features = false }
base64 = { workspace = true }
age = { workspace = true, default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true, default-features = false }
argon2 = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
tokio-stream = { version = "0.1", default-features = false, features = ["sync", "time"] }
async-stream = { version = "0.3", default-features = false }
tar = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
scryer-release-parser = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
