[package]
name = "weaver-server-core"
description = "Shared types, errors, config, and buffer pool primitives for Weaver"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
slow-tests = []

[dependencies]
weaver-model = { path = "../../../shared/crates/weaver-model", default-features = false }
weaver-nntp = { path = "../../../engines/weaver-nntp", default-features = false }
weaver-nzb = { path = "../../../engines/weaver-nzb", default-features = false }
weaver-yenc = { path = "../../../engines/weaver-yenc", default-features = false }
weaver-par2 = { workspace = true, features = [
    "native-crypto",
] }
weaver-unrar = { workspace = true, features = [
    "native-crypto",
] }
serde = { workspace = true }
blake3 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
crossbeam-queue = { workspace = true }
bitvec = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true, default-features = false }
libc = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true, default-features = false }
reqwest = { workspace = true }
regex = { workspace = true }
quick-xml = { workspace = true }
notify = { workspace = true }
zstd = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
bzip2 = { workspace = true }
sqlx = { workspace = true }
rmp-serde = { workspace = true, default-features = false }
tempfile = { workspace = true }
filetime = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
sevenz-rust2 = { workspace = true }
argon2 = { workspace = true }
getrandom = { workspace = true, default-features = false }
hex = { workspace = true }
pbkdf2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
security-framework-sys = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true }
keyring-core = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
sevenz-rust2 = { workspace = true }
axum = { workspace = true }

[build-dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zstd = { workspace = true }
